src/scss/Modal.scss
.nds-modal {
  .nds-modal-overlay {
    display: none;
    z-index: 1;
    background: #000;
    opacity: 70%;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
  }
  & > .nds-modal-container {
    overflow: scroll;
    max-height: 80vh;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    padding: 40px;
    display: none;
    z-index: 100;
    position: fixed;
    background: RGB(var(--nds-white));
    border-radius: 8px;
    max-width: 500px;
  }

  &[data-open="true"] {
    > .nds-modal-overlay {
      display: block;
    }
    > .nds-modal-container {
      display: block;
      > .nds-modal-dismiss {
        display: block;
      }
    }
  }

  & > .nds-modal-container {
    display: none;
    z-index: 1;
    position: fixed;
    background: RGB(var(--nds-white));
  }

  .nds-modal-dismiss {
    display: none;
    position: absolute;
    top: 16px;
    right: 16px;
    cursor: pointer;
  }

  /* right styles */
  &.right > .nds-modal-container {
    top: 0;
    right: 0;
    transform: none;
    bottom: 0;
    left: initial;
    padding: 40px 25px 40px 20px;
    border-radius: 0;
    width: 335px;
    @media (min-width: $desktop-small) {
      width: initial;
    }
  }
  /* details styles */
  &.details[data-open="true"] .nds-modal-overlay {
    display: none;
  }
  &.details[data-open="true"] > .nds-modal-container > .nds-modal-dismiss {
    display: none;
  }
  &.details > .nds-modal-container {
    top: 0;
    right: 0;
    transform: none;
    position: static;
    padding: 0;
  }

  .nds-modal-action-row {
    display: flex;
    flex-direction: row;
    float: right;
    align-items: center;
    margin-top: 40px;
  }

  h4.nds-sans {
    margin-top: 0;
    margin-bottom: 0;
  }
}

hr.nds-hr {
  border: 1px solid RGB(var(--nds-primary-color));
}

